# SensorSystem

./: CMakeLists.txt  CommandEncoder.cpp  DeviceCommand.hpp  MockTestsSensor.cpp  MultiReadingTemperatureDecoder.hpp  README.md  SensorFactory.cpp  SensorFactory.hpp  SensorServer.hpp  SensorSystem.cpp  SensorSystem.hpp  SensorTests.cpp  SensorTestsCmdEncode.cpp  TemperatureInCelsiusDecoder.hpp  sensor.cpp  sensor.hpp
docs/: README.md  README_D.md  README_E.md
inc/: AirpressureInPascalDecoder.hpp  CombinedSensorDecoder.hpp  CommandEncoder.hpp  DecoderInterface.hpp  DeviceCommand.hpp  EncoderInterface.hpp  MultiReadingTemperatureDecoder.hpp  SensorServer.hpp  SensorServerInterface.hpp  SensorValue.hpp  TemperatureInCelsiusDecoder.hpp  TemperatureInKelvinDecoder.hpp  TestObject.hpp  TestTemperatureDecoder.hpp
src/: AirpressureInPascalDecoder.cpp  CombinedSensorDecoder.cpp  MultiReadingTemperatureDecoder.cpp  SensorServer.cpp  TemperatureInCelsiusDecoder.cpp  TemperatureInKelvinDecoder.cpp  TestTemperatureDecoder.cpp
tests/: CMakeCache.txt  MockTestsSensor.cpp  SensorTests.cpp  TestObject.cpp  TestObject.hpp
